// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQCI6dqw7WEtCG8e_zJEkw1wucw0maWqkkBlZlGnTsjmS8Gv"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQBio3RNyoEz76dbHEr44ATGHV-kLekbtZu9zIMCrmuQKUZQ"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQA9avPKRM9jOMfJgceM0pk0BKUgKjBMvAX3qq6Sg-qrk-NK"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQCI6dqw7WEtCG8e_zJEkw1wucw0maWqkkBlZlGnTsjmS8Gv",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 18372n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCI6dqw7WEtCG8e_zJEkw1wucw0maWqkkBlZlGnTsjmS8Gv",
            "to": "kQBio3RNyoEz76dbHEr44ATGHV-kLekbtZu9zIMCrmuQKUZQ",
            "type": "internal",
            "value": 9964909000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCI6dqw7WEtCG8e_zJEkw1wucw0maWqkkBlZlGnTsjmS8Gv",
          "to": "kQBio3RNyoEz76dbHEr44ATGHV-kLekbtZu9zIMCrmuQKUZQ",
          "type": "internal",
          "value": 9964909000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17273n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBio3RNyoEz76dbHEr44ATGHV-kLekbtZu9zIMCrmuQKUZQ",
            "to": "kQA9avPKRM9jOMfJgceM0pk0BKUgKjBMvAX3qq6Sg-qrk-NK",
            "type": "internal",
            "value": 9936839000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBio3RNyoEz76dbHEr44ATGHV-kLekbtZu9zIMCrmuQKUZQ",
          "to": "kQA9avPKRM9jOMfJgceM0pk0BKUgKjBMvAX3qq6Sg-qrk-NK",
          "type": "internal",
          "value": 9936839000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17283n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQA9avPKRM9jOMfJgceM0pk0BKUgKjBMvAX3qq6Sg-qrk-NK",
            "to": "kQA9avPKRM9jOMfJgceM0pk0BKUgKjBMvAX3qq6Sg-qrk-NK",
            "type": "internal",
            "value": 9908751000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQA9avPKRM9jOMfJgceM0pk0BKUgKjBMvAX3qq6Sg-qrk-NK",
          "to": "kQA9avPKRM9jOMfJgceM0pk0BKUgKjBMvAX3qq6Sg-qrk-NK",
          "type": "internal",
          "value": 9908751000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 5007n,
      },
    ],
  },
]
`;
